[tool.poetry]
name = "app-microservice"
version = "0.1.0"
description = ""
authors = ["Yabir G. <yabirgb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
Flask-SQLAlchemy = "^2.4.1"
Authlib = "^0.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
