[package]
name = "image_api"
version = "0.1.0"
authors = ["Yabir G. <yabirg@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
futures = "0.3.4"
actix-multipart = "0.2.0"
async-std = "1.5.0"
