[package]
name = "anfora_server"
version = "0.1.0"
authors = ["Yabir Garcia <yabirg@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres","chrono", "r2d2", "64-column-tables", "serde_json"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
rust-argon2 = "0.8"
activitystreams = "0.6.2"
actix = "0.9.0"
actix-multipart = "0.3.0-alpha.1"
actix-web = "3.0.0-alpha.2"
actix-files = "0.2.2"
actix-web-actors = "2.0.0"
actix-rt = "1.1.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = { version = "1.0.56", features = ["preserve_order"]}
chrono = { version = "0.4.13", features = ["serde"] }
failure = "0.1.8"
env_logger = "0.7.1"
actix-form-data = {git = "https://git.asonix.dog/Aardwolf/actix-form-data.git"}
futures = "0.3.4"
thiserror = "1.0"
tokio = { version = "0.2.21", features = ["sync"] }
tracing = "0.1.15"
tracing-futures = "0.2.4"
bytes = "0.5.0"
uuid = {version="0.8.1", features = ["serde", "v4"]}
jsonwebtoken = "7.2.0"

actix-fs = { git = "https://git.asonix.dog/asonix/actix-fs" }
